--- a/xmlPT.css
+++ b/xmlPT.css
@@ -9,7 +9,7 @@
 
 #element1
 {
-	background: blue;
+	background: white;
 	cursor: pointer;
 	position: absolute;
 	top: 100px;
@@ -18,7 +18,7 @@
 
 #element2
 {
-	background: blue;
+	background: white;
 	cursor: pointer;
 	position: absolute;
 	top: 100px;
@@ -27,7 +27,7 @@
 
 #element3
 {
-	background: blue;
+	background: white;
 	cursor: pointer;
 	position: absolute;
 	top: 154px;
@@ -36,7 +36,7 @@
 
 #element4
 {
-	background: blue;
+	background: white;
 	cursor: pointer;
 	position: absolute;
 	top: 154px;
@@ -45,7 +45,7 @@
 
 #element5
 {
-	background: blue;
+	background: white;
 	cursor: pointer;
 	position: absolute;
 	top: 154px;
@@ -54,7 +54,7 @@
 
 #element6
 {
-	background: blue;
+	background: white;
 	cursor: pointer;
 	position: absolute;
 	top: 154px;
@@ -63,7 +63,7 @@
 
 #element7
 {
-	background: blue;
+	background: white;
 	cursor: pointer;
 	position: absolute;
 	top: 154px;
@@ -72,7 +72,7 @@
 
 #element8
 {
-	background: blue;
+	background: white;
 	cursor: pointer;
 	position: absolute;
 	top: 154px;
@@ -81,7 +81,7 @@
 
 #element9
 {
-	background: blue;
+	background: white;
 	cursor: pointer;
 	position: absolute;
 	top: 154px;
@@ -90,7 +90,7 @@
 
 #element10
 {
-	background: blue;
+	background: white;
 	cursor: pointer;
 	position: absolute;
 	top: 154px;
@@ -99,7 +99,7 @@
 
 #element11
 {
-	background: blue;
+	background: white;
 	cursor: pointer;
 	position: absolute;
 	top: 208px;
@@ -108,7 +108,7 @@
 
 #element12
 {
-	background: blue;
+	background: white;
 	cursor: pointer;
 	position: absolute;
 	top: 208px;
@@ -117,7 +117,7 @@
 
 #element13
 {
-	background: blue;
+	background: white;
 	cursor: pointer;
 	position: absolute;
 	top: 208px;
@@ -126,7 +126,7 @@
 
 #element14
 {
-	background: blue;
+	background: white;
 	cursor: pointer;
 	position: absolute;
 	top: 208px;
@@ -135,7 +135,7 @@
 
 #element15
 {
-	background: blue;
+	background: white;
 	cursor: pointer;
 	position: absolute;
 	top: 208px;
@@ -144,7 +144,7 @@
 
 #element16
 {
-	background: blue;
+	background: white;
 	cursor: pointer;
 	position: absolute;
 	top: 208px;
@@ -153,7 +153,7 @@
 
 #element17
 {
-	background: blue;
+	background: white;
 	cursor: pointer;
 	position: absolute;
 	top: 208px;
@@ -162,7 +162,7 @@
 
 #element18
 {
-	background: blue;
+	background: white;
 	cursor: pointer;
 	position: absolute;
 	top: 208px;
@@ -171,7 +171,7 @@
 
 #element19
 {
-	background: blue;
+	background: white;
 	cursor: pointer;
 	position: absolute;
 	top: 262px;
@@ -180,7 +180,7 @@
 
 #element20
 {
-	background: blue;
+	background: white;
 	cursor: pointer;
 	position: absolute;
 	top: 262px;
@@ -189,7 +189,7 @@
 
 #element21
 {
-	background: blue;
+	background: white;
 	cursor: pointer;
 	position: absolute;
 	top: 262px;
@@ -198,7 +198,7 @@
 
 #element22
 {
-	background: blue;
+	background: white;
 	cursor: pointer;
 	position: absolute;
 	top: 262px;
@@ -207,7 +207,7 @@
 
 #element23
 {
-	background: blue;
+	background: white;
 	cursor: pointer;
 	position: absolute;
 	top: 262px;
@@ -216,7 +216,7 @@
 
 #element24
 {
-	background: blue;
+	background: white;
 	cursor: pointer;
 	position: absolute;
 	top: 262px;
@@ -225,7 +225,7 @@
 
 #element25
 {
-	background: blue;
+	background: white;
 	cursor: pointer;
 	position: absolute;
 	top: 262px;
@@ -234,7 +234,7 @@
 
 #element26
 {
-	background: blue;
+	background: white;
 	cursor: pointer;
 	position: absolute;
 	top: 262px;
@@ -243,7 +243,7 @@
 
 #element27
 {
-	background: blue;
+	background: white;
 	cursor: pointer;
 	position: absolute;
 	top: 262px;
@@ -252,7 +252,7 @@
 
 #element28
 {
-	background: blue;
+	background: white;
 	cursor: pointer;
 	position: absolute;
 	top: 262px;
@@ -261,7 +261,7 @@
 
 #element29
 {
-	background: blue;
+	background: white;
 	cursor: pointer;
 	position: absolute;
 	top: 262px;
@@ -270,7 +270,7 @@
 
 #element30
 {
-	background: blue;
+	background: white;
 	cursor: pointer;
 	position: absolute;
 	top: 262px;
@@ -279,7 +279,7 @@
 
 #element31
 {
-	background: blue;
+	background: white;
 	cursor: pointer;
 	position: absolute;
 	top: 262px;
@@ -288,7 +288,7 @@
 
 #element32
 {
-	background: blue;
+	background: white;
 	cursor: pointer;
 	position: absolute;
 	top: 262px;
@@ -297,7 +297,7 @@
 
 #element33
 {
-	background: blue;
+	background: white;
 	cursor: pointer;
 	position: absolute;
 	top: 262px;
@@ -306,7 +306,7 @@
 
 #element34
 {
-	background: blue;
+	background: white;
 	cursor: pointer;
 	position: absolute;
 	top: 262px;
@@ -315,7 +315,7 @@
 
 #element35
 {
-	background: blue;
+	background: white;
 	cursor: pointer;
 	position: absolute;
 	top: 262px;
@@ -324,7 +324,7 @@
 
 #element36
 {
-	background: blue;
+	background: white;
 	cursor: pointer;
 	position: absolute;
 	top: 262px;
@@ -333,7 +333,7 @@
 
 #element37
 {
-	background: blue;
+	background: white;
 	cursor: pointer;
 	position: absolute;
 	top: 316px;
@@ -342,7 +342,7 @@
 
 #element38
 {
-	background: blue;
+	background: white;
 	cursor: pointer;
 	position: absolute;
 	top: 316px;
@@ -351,7 +351,7 @@
 
 #element39
 {
-	background: blue;
+	background: white;
 	cursor: pointer;
 	position: absolute;
 	top: 316px;
@@ -360,7 +360,7 @@
 
 #element40
 {
-	background: blue;
+	background: white;
 	cursor: pointer;
 	position: absolute;
 	top: 316px;
@@ -369,7 +369,7 @@
 
 #element41
 {
-	background: blue;
+	background: white;
 	cursor: pointer;
 	position: absolute;
 	top: 316px;
@@ -378,7 +378,7 @@
 
 #element42
 {
-	background: blue;
+	background: white;
 	cursor: pointer;
 	position: absolute;
 	top: 316px;
@@ -387,7 +387,7 @@
 
 #element43
 {
-	background: blue;
+	background: white;
 	cursor: pointer;
 	position: absolute;
 	top: 316px;
@@ -396,7 +396,7 @@
 
 #element44
 {
-	background: blue;
+	background: white;
 	cursor: pointer;
 	position: absolute;
 	top: 316px;
@@ -405,7 +405,7 @@
 
 #element45
 {
-	background: blue;
+	background: white;
 	cursor: pointer;
 	position: absolute;
 	top: 316px;
@@ -414,7 +414,7 @@
 
 #element46
 {
-	background: blue;
+	background: white;
 	cursor: pointer;
 	position: absolute;
 	top: 316px;
@@ -423,7 +423,7 @@
 
 #element47
 {
-	background: blue;
+	background: white;
 	cursor: pointer;
 	position: absolute;
 	top: 316px;
@@ -432,7 +432,7 @@
 
 #element48
 {
-	background: blue;
+	background: white;
 	cursor: pointer;
 	position: absolute;
 	top: 316px;
@@ -441,7 +441,7 @@
 
 #element49
 {
-	background: blue;
+	background: white;
 	cursor: pointer;
 	position: absolute;
 	top: 316px;
@@ -450,7 +450,7 @@
 
 #element50
 {
-	background: blue;
+	background: white;
 	cursor: pointer;
 	position: absolute;
 	top: 316px;
@@ -459,7 +459,7 @@
 
 #element51
 {
-	background: blue;
+	background: white;
 	cursor: pointer;
 	position: absolute;
 	top: 316px;
@@ -468,7 +468,7 @@
 
 #element52
 {
-	background: blue;
+	background: white;
 	cursor: pointer;
 	position: absolute;
 	top: 316px;
@@ -477,7 +477,7 @@
 
 #element53
 {
-	background: blue;
+	background: white;
 	cursor: pointer;
 	position: absolute;
 	top: 316px;
@@ -486,7 +486,7 @@
 
 #element54
 {
-	background: blue;
+	background: white;
 	cursor: pointer;
 	position: absolute;
 	top: 316px;
@@ -495,7 +495,7 @@
 
 #element55
 {
-	background: blue;
+	background: white;
 	cursor: pointer;
 	position: absolute;
 	top: 370px;
@@ -504,7 +504,7 @@
 
 #element56
 {
-	background: blue;
+	background: white;
 	cursor: pointer;
 	position: absolute;
 	top: 370px;
@@ -513,7 +513,7 @@
 
 #element57
 {
-	background: blue;
+	background: white;
 	cursor: pointer;
 	position: absolute;
 	top: 550px;
@@ -522,7 +522,7 @@
 
 #element58
 {
-	background: blue;
+	background: white;
 	cursor: pointer;
 	position: absolute;
 	top: 550px;
@@ -531,7 +531,7 @@
 
 #element59
 {
-	background: blue;
+	background: white;
 	cursor: pointer;
 	position: absolute;
 	top: 550px;
@@ -540,7 +540,7 @@
 
 #element60
 {
-	background: blue;
+	background: white;
 	cursor: pointer;
 	position: absolute;
 	top: 550px;
@@ -549,7 +549,7 @@
 
 #element61
 {
-	background: blue;
+	background: white;
 	cursor: pointer;
 	position: absolute;
 	top: 550px;
@@ -558,7 +558,7 @@
 
 #element62
 {
-	background: blue;
+	background: white;
 	cursor: pointer;
 	position: absolute;
 	top: 550px;
@@ -567,7 +567,7 @@
 
 #element63
 {
-	background: blue;
+	background: white;
 	cursor: pointer;
 	position: absolute;
 	top: 550px;
@@ -576,7 +576,7 @@
 
 #element64
 {
-	background: blue;
+	background: white;
 	cursor: pointer;
 	position: absolute;
 	top: 550px;
@@ -585,7 +585,7 @@
 
 #element65
 {
-	background: blue;
+	background: white;
 	cursor: pointer;
 	position: absolute;
 	top: 550px;
@@ -594,7 +594,7 @@
 
 #element66
 {
-	background: blue;
+	background: white;
 	cursor: pointer;
 	position: absolute;
 	top: 550px;
@@ -603,7 +603,7 @@
 
 #element67
 {
-	background: blue;
+	background: white;
 	cursor: pointer;
 	position: absolute;
 	top: 550px;
@@ -612,7 +612,7 @@
 
 #element68
 {
-	background: blue;
+	background: white;
 	cursor: pointer;
 	position: absolute;
 	top: 550px;
@@ -621,7 +621,7 @@
 
 #element69
 {
-	background: blue;
+	background: white;
 	cursor: pointer;
 	position: absolute;
 	top: 550px;
@@ -630,7 +630,7 @@
 
 #element70
 {
-	background: blue;
+	background: white;
 	cursor: pointer;
 	position: absolute;
 	top: 550px;
@@ -639,7 +639,7 @@
 
 #element71
 {
-	background: blue;
+	background: white;
 	cursor: pointer;
 	position: absolute;
 	top: 550px;
@@ -656,7 +656,7 @@
 
 #element72
 {
-	background: blue;
+	background: white;
 	cursor: pointer;
 	position: absolute;
 	top: 370px;
@@ -665,7 +665,7 @@
 
 #element72
 {
-	background: blue;
+	background: white;
 	cursor: pointer;
 	position: absolute;
 	top: 370px;
@@ -674,7 +674,7 @@
 
 #element73
 {
-	background: blue;
+	background: white;
 	cursor: pointer;
 	position: absolute;
 	top: 370px;
@@ -683,7 +683,7 @@
 
 #element74
 {
-	background: blue;
+	background: white;
 	cursor: pointer;
 	position: absolute;
 	top: 370px;
@@ -692,7 +692,7 @@
 
 #element75
 {
-	background: blue;
+	background: white;
 	cursor: pointer;
 	position: absolute;
 	top: 370px;
@@ -701,7 +701,7 @@
 
 #element76
 {
-	background: blue;
+	background: white;
 	cursor: pointer;
 	position: absolute;
 	top: 370px;
@@ -710,7 +710,7 @@
 
 #element77
 {
-	background: blue;
+	background: white;
 	cursor: pointer;
 	position: absolute;
 	top: 370px;
@@ -719,7 +719,7 @@
 
 #element78
 {
-	background: blue;
+	background: white;
 	cursor: pointer;
 	position: absolute;
 	top: 370px;
@@ -728,7 +728,7 @@
 
 #element79
 {
-	background: blue;
+	background: white;
 	cursor: pointer;
 	position: absolute;
 	top: 370px;
@@ -737,7 +737,7 @@
 
 #element80
 {
-	background: blue;
+	background: white;
 	cursor: pointer;
 	position: absolute;
 	top: 370px;
@@ -746,7 +746,7 @@
 
 #element81
 {
-	background: blue;
+	background: white;
 	cursor: pointer;
 	position: absolute;
 	top: 370px;
@@ -755,7 +755,7 @@
 
 #element82
 {
-	background: blue;
+	background: white;
 	cursor: pointer;
 	position: absolute;
 	top: 370px;
@@ -764,7 +764,7 @@
 
 #element83
 {
-	background: blue;
+	background: white;
 	cursor: pointer;
 	position: absolute;
 	top: 370px;
@@ -773,7 +773,7 @@
 
 #element84
 {
-	background: blue;
+	background: white;
 	cursor: pointer;
 	position: absolute;
 	top: 370px;
@@ -782,7 +782,7 @@
 
 #element85
 {
-	background: blue;
+	background: white;
 	cursor: pointer;
 	position: absolute;
 	top: 370px;
@@ -791,7 +791,7 @@
 
 #element86
 {
-	background: blue;
+	background: white;
 	cursor: pointer;
 	position: absolute;
 	top: 370px;
@@ -800,7 +800,7 @@
 
 #element87
 {
-	background: blue;
+	background: white;
 	cursor: pointer;
 	position: absolute;
 	top: 424px;
@@ -809,7 +809,7 @@
 
 #element88
 {
-	background: blue;
+	background: white;
 	cursor: pointer;
 	position: absolute;
 	top: 424px;
@@ -826,7 +826,7 @@
 
 #element89
 {
-	background: blue;
+	background: white;
 	cursor: pointer;
 	position: absolute;
 	top: 604px;
@@ -835,7 +835,7 @@
 
 #element90
 {
-	background: blue;
+	background: white;
 	cursor: pointer;
 	position: absolute;
 	top: 604px;
@@ -844,7 +844,7 @@
 
 #element91
 {
-	background: blue;
+	background: white;
 	cursor: pointer;
 	position: absolute;
 	top: 604px;
@@ -853,7 +853,7 @@
 
 #element92
 {
-	background: blue;
+	background: white;
 	cursor: pointer;
 	position: absolute;
 	top: 604px;
@@ -862,7 +862,7 @@
 
 #element93
 {
-	background: blue;
+	background: white;
 	cursor: pointer;
 	position: absolute;
 	top: 604px;
@@ -871,7 +871,7 @@
 
 #element94
 {
-	background: blue;
+	background: white;
 	cursor: pointer;
 	position: absolute;
 	top: 604px;
@@ -880,7 +880,7 @@
 
 #element95
 {
-	background: blue;
+	background: white;
 	cursor: pointer;
 	position: absolute;
 	top: 604px;
@@ -889,7 +889,7 @@
 
 #element96
 {
-	background: blue;
+	background: white;
 	cursor: pointer;
 	position: absolute;
 	top: 604px;
@@ -898,7 +898,7 @@
 
 #element97
 {
-	background: blue;
+	background: white;
 	cursor: pointer;
 	position: absolute;
 	top: 604px;
@@ -907,7 +907,7 @@
 
 #element98
 {
-	background: blue;
+	background: white;
 	cursor: pointer;
 	position: absolute;
 	top: 604px;
@@ -916,7 +916,7 @@
 
 #element99
 {
-	background: blue;
+	background: white;
 	cursor: pointer;
 	position: absolute;
 	top: 604px;
@@ -925,7 +925,7 @@
 
 #element100
 {
-	background: blue;
+	background: white;
 	cursor: pointer;
 	position: absolute;
 	top: 604px;
@@ -934,7 +934,7 @@
 
 #element101
 {
-	background: blue;
+	background: white;
 	cursor: pointer;
 	position: absolute;
 	top: 604px;
@@ -943,7 +943,7 @@
 
 #element102
 {
-	background: blue;
+	background: white;
 	cursor: pointer;
 	position: absolute;
 	top: 604px;
@@ -952,7 +952,7 @@
 
 #element103
 {
-	background: blue;
+	background: white;
 	cursor: pointer;
 	position: absolute;
 	top: 604px;
@@ -961,7 +961,7 @@
 
 #element104
 {
-	background: blue;
+	background: white;
 	cursor: pointer;
 	position: absolute;
 	top: 424px;
@@ -970,7 +970,7 @@
 
 #element105
 {
-	background: blue;
+	background: white;
 	cursor: pointer;
 	position: absolute;
 	top: 424px;
@@ -979,7 +979,7 @@
 
 #element106
 {
-	background: blue;
+	background: white;
 	cursor: pointer;
 	position: absolute;
 	top: 424px;
@@ -988,7 +988,7 @@
 
 #element107
 {
-	background: blue;
+	background: white;
 	cursor: pointer;
 	position: absolute;
 	top: 424px;
@@ -997,7 +997,7 @@
 
 #element108
 {
-	background: blue;
+	background: white;
 	cursor: pointer;
 	position: absolute;
 	top: 424px;
@@ -1006,7 +1006,7 @@
 
 #element109
 {
-	background: blue;
+	background: white;
 	cursor: pointer;
 	position: absolute;
 	top: 424px;
@@ -1015,7 +1015,7 @@
 
 #element110
 {
-	background: blue;
+	background: white;
 	cursor: pointer;
 	position: absolute;
 	top: 424px;
@@ -1024,7 +1024,7 @@
 
 #element111
 {
-	background: blue;
+	background: white;
 	cursor: pointer;
 	position: absolute;
 	top: 424px;
@@ -1033,7 +1033,7 @@
 
 #element112
 {
-	background: blue;
+	background: white;
 	cursor: pointer;
 	position: absolute;
 	top: 424px;
@@ -1042,7 +1042,7 @@
 
 #element113
 {
-	background: blue;
+	background: white;
 	cursor: pointer;
 	position: absolute;
 	top: 424px;
@@ -1051,7 +1051,7 @@
 
 #element114
 {
-	background: blue;
+	background: white;
 	cursor: pointer;
 	position: absolute;
 	top: 424px;
@@ -1060,7 +1060,7 @@
 
 #element115
 {
-	background: blue;
+	background: white;
 	cursor: pointer;
 	position: absolute;
 	top: 424px;
@@ -1069,7 +1069,7 @@
 
 #element116
 {
-	background: blue;
+	background: white;
 	cursor: pointer;
 	position: absolute;
 	top: 424px;
@@ -1078,7 +1078,7 @@
 
 #element117
 {
-	background: blue;
+	background: white;
 	cursor: pointer;
 	position: absolute;
 	top: 424px;
@@ -1087,7 +1087,7 @@
 
 #element118
 {
-	background: blue;
+	background: white;
 	cursor: pointer;
 	position: absolute;
 	top: 424px;
